--- a/TEQClient/teqclient/src/assets/main.css
+++ b/TEQClient/teqclient/src/assets/main.css
@@ -12,3 +12,8 @@
     justify-content: center;
     align-items: center;
 }
+
+input[type="checkbox"]:checked {
+    background-color: #c5a992;
+    border-color: #c5a992;
+}
