--- a/TEQClient/teqclient/src/assets/main.css
+++ b/TEQClient/teqclient/src/assets/main.css
@@ -13,8 +13,14 @@
     align-items: center;
 }
 
-input[type="checkbox"]:checked {
+.form-check-input:checked {
     background-color: rgb(242, 137, 63);
+    border-color: rgb(154, 75, 20);
+    box-shadow: 0 0 4px 4px #c5a992;
+}
+
+.form-check-input:focus {
+    box-shadow: 0 0 4px 4px #c5a992;
     border-color: rgb(154, 75, 20);
 }
 .card{
