--- a/TEQClient/teqclient/src/assets/main.css
+++ b/TEQClient/teqclient/src/assets/main.css
@@ -51,8 +51,8 @@
 }
 
 .btn-hover:hover{
+    color: rgb(242, 137, 63);
     cursor: pointer;
-    opacity: 0.8;
 }
 .img-404{
     width: 100%;
@@ -67,4 +67,9 @@
     position: absolute;
     right: 5px;
     top: 5px;
+}
+
+.dropdown-item:hover{
+    color: rgb(242, 137, 63);
+    cursor: pointer;
 }
