--- a/TEQClient/teqclient/src/assets/css/style.css
+++ b/TEQClient/teqclient/src/assets/css/style.css
@@ -195,6 +195,23 @@ a {
     --bs-gradient: none;
 }
 
+.btn-outline-secondary {
+    --bs-btn-color: rgb(242, 137, 63);
+    --bs-btn-border-color: rgb(242, 137, 63);
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: rgb(243, 152, 87);
+    --bs-btn-hover-border-color: rgb(246, 126, 41);
+    --bs-btn-focus-shadow-rgb: 13, 110, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: rgb(241, 115, 27);
+    --bs-btn-active-border-color: var(--bs-primary);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: var(--bs-primary);
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: var(--bs-primary);
+    --bs-gradient: none;
+}
+
 .pagination {
     --bs-pagination-active-bg: var(--bs-black);
     --bs-pagination-bg: transparent;
